[gd_scene load_steps=14 format=2]

[ext_resource path="res://inimigos/boss/boss_final/Final_Boss_(TD).gd" type="Script" id=1]
[ext_resource path="res://inimigos/boss/boss_final/metal_gear_TD/metal gear top down Rocket f1.png" type="Texture" id=2]
[ext_resource path="res://inimigos/boss/boss_final/metal_gear_TD/metal gear top down Rocket f2.png" type="Texture" id=3]
[ext_resource path="res://inimigos/boss/boss_final/metal_gear_TD/metal gear top down Rocket f5.png" type="Texture" id=4]
[ext_resource path="res://inimigos/boss/boss_final/metal_gear_TD/metal gear top down Rocket f3.png" type="Texture" id=5]
[ext_resource path="res://inimigos/boss/boss_final/metal_gear_TD/metal gear top down Rocket f4.png" type="Texture" id=6]
[ext_resource path="res://inimigos/boss/boss_final/metal_gear_TD/metal gear top down Rocket f6.png" type="Texture" id=7]
[ext_resource path="res://audio_geral/efeitos_sonoros/fase5/MechaAndando.wav" type="AudioStream" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32.3321, 32.4882 )

[sub_resource type="Animation" id=4]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "missil_attack"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "walking"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("walking:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 38.6665

[node name="Final_Boss" type="KinematicBody2D" groups=[
"enemie",
]]
script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]
scale = Vector2( 0.969281, 0.921468 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 1.4, 1.2 )
shape = SubResource( 1 )

[node name="animation" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 4 )
anims/missil_attack = SubResource( 5 )
anims/walking = SubResource( 2 )

[node name="walking" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="delay_attack1" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="delay_attack2" type="Timer" parent="."]
wait_time = 2.0

[node name="delay_attack3" type="Timer" parent="."]
wait_time = 3.0

[node name="change_attack" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="area_corpo_mech" type="Area2D" parent="."]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_corpo_mech" groups=[
"enemie",
]]
shape = SubResource( 3 )

[node name="cannon_fire1" type="Position2D" parent="."]
position = Vector2( -120.494, -66.7627 )

[node name="cannon_fire2" type="Position2D" parent="."]
position = Vector2( -120.494, 63.573 )

[node name="cannon_fire3" type="Position2D" parent="."]
position = Vector2( -99.9115, -2.90722 )

[node name="missile_launcher" type="Position2D" parent="."]
position = Vector2( 79.054, 0 )

[node name="reload" type="Timer" parent="."]
wait_time = 2.0

[node name="impulse" type="Timer" parent="."]
[connection signal="timeout" from="delay_attack1" to="." method="_on_delay_attack1_timeout"]
[connection signal="timeout" from="delay_attack2" to="." method="_on_delay_attack2_timeout"]
[connection signal="timeout" from="delay_attack3" to="." method="_on_delay_attack3_timeout"]
[connection signal="timeout" from="change_attack" to="." method="_on_change_attack_timeout"]
[connection signal="area_entered" from="area_corpo_mech" to="." method="_on_area_corpo_mech_area_entered"]
[connection signal="timeout" from="reload" to="." method="_on_reload_timeout"]
[connection signal="timeout" from="impulse" to="." method="_on_impulse_timeout"]
